Fix/remove horizontal scrolling

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
